# this-week-in-open-source

./: 2021-12-01.html  2021-12-01.md  2023-09-04.md  2023-09-09.md  Cargo.toml  LICENSE  README.md  comment.txt  sample_config.json  shell.nix
.github/workflows/: twios.yaml
nix/: sources.json
src/: cli.rs  data_loader.rs  main.rs
twios/: 2023-09-18.md  2023-09-24.md  2023-10-08.md  2023-10-15.md  2023-11-12.md  2023-11-19.md  2023-11-26.md  2023-12-03.md  2024-01-14.md  2024-02-29.md  2024-03-03.md  2024-03-10.md  2024-03-31.md  2024-04-14.md  2024-04-28.md  2024-06-09.md  2024-06-16.md  2024-06-30.md  2024-07-07.md  2024-07-14.md  2024-07-21.md  2024-07-28.md  2024-09-15.md  2024-09-22.md  2024-09-29.md
