[package]
name = "this-week-in-open-source"
version = "0.5.1"
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.15"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.9.5"
chrono = "0.4.30"
openssl = { version = "0.10", features = ["vendored"] }
